--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,1 +1,117 @@
 @import "tailwindcss";
+
+body {
+  background-color: black;
+}
+
+.heroshape {
+  width: 46vw;
+  height: 36vw;
+  right: 0;
+  position: absolute;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  filter: blur(25px);
+}
+
+.hero {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(255, 174, 88);
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+}
+
+.hero2 {
+  height: 28vw;
+  width: 30vw;
+  background-color: rgb(255, 174, 88);
+  border-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+  animation-name: Animi2;
+  animation-timing-function: linear;
+  animation-duration: 3s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+.hero3 {
+  height: 28vw;
+  width: 30vw;
+  background-color: rgb(255, 174, 88);
+  border-radius: 50%;
+  filter: blur(20px);
+  position: absolute;
+  animation-name: Animi;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes Animi {
+  from {
+    transform: translate(-10%, -10%);
+  }
+  to {
+    transform: translate(10, -10%);
+  }
+}
+
+@keyframes Animi2 {
+  from {
+    transform: translate(70%, -7%);
+  }
+  to {
+    transform: translate(-20%, 20%);
+  }
+}
+
+/* ✅ Mobile responsiveness */
+@media (max-width: 768px) {
+  .heroshape {
+    width: 80vw;
+    height: 60vw;
+    filter: blur(20px);
+    margin-top: 75px;
+  }
+
+  .hero2,
+  .hero3 {
+    width: 50vw;
+    height: 45vw;
+    filter: blur(15px);
+  }
+}
+/* animation 2 */
+.heros-shape{
+    height: 27vw;
+    width: 27vw;
+    border-radius: 50%;
+    background-color: orange;
+    filter: blur(20px);
+    position: absolute;
+}
+.heros-shape2{
+    height: 27vw;
+    width: 27vw;
+    border-radius: 50%;
+    background-color: orange;
+    filter: blur(20px);
+    position: absolute;
+    animation-name: animi;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;animation-direction: alternate;}
+
+@keyframes animi {
+  from {
+    transform: translate(0, 0);
+  }
+  to {
+    transform: translate(10%, -10%);
+  }
+}
