--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,8 +1,13 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
+
 p{
   font-family: 'Poppins', 'sans-serif',
 }
 a{
   font-family: 'Poppins', 'sans-serif',
+}
+
+h1{
+  font-family: "Outfit", sans-serif;
 }
