--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -15,3 +15,11 @@ h1{
 p{
   font-family: "Edu NSW ACT Hand Pre", cursive;
 }
+
+.scroll-box {
+  width: 400px;
+  height: 300px;
+  overflow-y: auto; /* adds vertical scroll */
+  padding: 10px;
+  border: 1px solid #ccc;
+}
